# project-1_baranova_-25-555

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
labyrinth_game/: constants.py  main.py  player_actions.py  utils.py
