[project]
name = "labyrinth_game"
version = "0.1.0"
description = ""
authors = [
    {name = "BaranovaaPolinaa SweetDeer.1@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]
packages = [
    { include = "labyrinth_game" },
]

[tool.poetry.scripts]
project = "labyrinth_game.main:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = 3.8
show_error_codes = true
plugins = ["pydantic.mypy"]
strict = true

[tool.ruff]
line-length = 88
target-version = 'py38'

[tool.ruff.format]
quote-style = "single"
