[project]
name = "labyrinth_game"
version = "0.1.0"
description = "Текстовая приключенческая игра-лабиринт с загадками и сокровищами"
authors = [
    {name = "BaranovaaPolinaa", email = "SweetDeer.1@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"

[tool.poetry]
name = "labyrinth_game"
version = "0.1.0"
description = "Текстовая приключенческая игра-лабиринт с загадками и сокровищами"
authors = ["BaranovaaPolinaa <SweetDeer.1@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []